--- a/src/index.css
+++ b/src/index.css
@@ -44,7 +44,7 @@ nav a:active {
 }
 
 #home,
-#about {
+#about,#links {
   display: flex;
   align-items: center;
   justify-content: center;
@@ -65,3 +65,4 @@ nav a:active {
 #about a {
   display: block;
 }
+
